# Final-Project

./: .gitignore  README.md  cenus_data.py  member_logs.md  pyproject.toml
404_project/chatbot/model/: agents.py  json_functions_modelfile
404_project/data_collection/: cenus_data.py  richmond.py
404_project/data_collection/source_data/: Houston_Tract_ID.xlsx
Project_404/chatbot/: env.sh
Project_404/chatbot/model/: agents.py  json_responses.py  model_setup.py
Project_404/data_collection/: richmond.py
Project_404/data_collection/source_data/: Dallas_Tract_ID.xlsx
chatbot/model/: LLM setup file.py  agents.py  json_responses.py  model_setup.py  prompt_prefixes.py  system_messages.py  utilities.py
chatbot/model/prompt_text/: few_shot_prompts.py  inital_instructions.py
data_collection/: cenus_data.py  epa.py  epa_LA.ipynb  epa_air_quality.py  epa_chicago.ipynb  epa_dallas.ipynb  epa_houston.ipynb  epa_new_orleans.ipynb  richmond.py  utilities.py
data_collection/data_files/: EPA.db  Los_Angeles_Tract_ID.xlsx  New_Orleans_Tract_ID.xlsx  chicago_epa.db  ~Data tracker.xlsx
data_collection/data_files/Practice DBs/: new_orleans_epa.db
data_collection/~data_documentation/: .xlsx:Zone.Identifier  variable_names.xlsx  ~variable_names.xlsx
datasets/: footnotes_142216.htm  footnotes_143658.htm  household_median_income.csv  precipitation.csv
project_404/: __main__.py  app.py
project_404/chatbot/: utilities.py
project_404/chatbot/model/: agents.py  json_responses.py  (+1 more)
project_404/data_collection/: census_data.py  cenus_data.py  epa.py  richmond.py  sql_database.py  utilities.py
tests/: test_agents.py
(+16 files in other folders)
